# ollama-learn

./: .gitignore  Modelfile  categorizer.py  creds.env.example  final-rag-voice.py  pdf-rag-streamlit.py  pyproject.toml  requirements.txt  start-2.py
data/: categorized_grocery_list.txt
langchain_scripts/: categorizer.py  final-rag-voice.py  final_rag_voice.py  function-calling.py  grocery_scrape.py  pdf-rag-clean.py  pdf-rag.py  pdf_rag_clean.py  start-1.py  utility.py
