[project]
name = "ollama-fundamentals"
version = "0.1.0"
description = ""
authors = [
    {name = "Carlos Huaccho",email = "Carlos@gmail.com"}
]
readme = "README.md"
package-mode = false
requires-python = ">=3.12,<3.13"
dependencies = [
    "torch (==2.2.2)",
    "ollama (>=0.4.7,<0.5.0)",
    "chromadb (>=0.6.3,<0.7.0)",
    "pdfplumber (>=0.11.5,<0.12.0)",
    "langchain (>=0.3.21,<0.4.0)",
    "langchain-core (>=0.3.47,<0.4.0)",
    "langchain-ollama (>=0.2.3,<0.3.0)",
    "langchain-community (>=0.3.20,<0.4.0)",
    "langchain-text-splitters (>=0.3.7,<0.4.0)",
    "unstructured[all-docs] (>=0.17.2,<0.18.0)",
    "unstructured[all-docs] (>=0.17.2,<0.18.0)",
    "fastembed (<0.6.0)",
    "pikepdf (>=9.5.2,<10.0.0)",
    "sentence-transformers (>=3.4.1,<4.0.0)",
    "elevenlabs (>=1.54.0,<2.0.0)",
    "langchain-chroma (>=0.2.2,<0.3.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
